@@ -1,3 +1,9 @@
+2004-10-23  Marcus Brinkmann  <marcus@gnu.org>
+
+	* ia32-cmain.c (start_kernel): Flush the D-cache.
+	* laden.c (main): Call panic() instead of shutdown() if kernel
+	returns.
+
 2004-03-30  Marcus Brinkmann  <marcus@gnu.org>
 
 	* loader.c (loader_elf_dest, loader_elf_load): Use 32 and 64
